--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<div class="wrapper"></div>
+
+  <div id="clock"></div>
 
 
-
-
-
-  <script src="jquery.js"></script>
-  <script src="main.js"></script>
+  <script src="js/jquery.js"></script>
+  <script src="js/main.js"></script>
 
 
 </body>
