--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
   <title>Clock</title>
   <link rel="stylesheet" href="css/main.css">
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="wrapper"></div>
+  <div class="wrapper">
 
-  <div id="clock"></div>
+    <div id="clock"></div>
+
+  </div>
 
 
   <script src="js/jquery.js"></script>
